# camera_calibration_simulation

./: calibration.py  camera_util_bl.py  evaluation.py  generate_obj.py  generate_pdf.py  postprocess.py  pyproject.toml  render.py  render_bl.py  render_exp.py
data/: intrin.json  intrin_noisy.json
data/settings/: base_setting.json  distbig.json  distbig_rotnoise.json  distbig_rotnoise_intrinerror.json  distmiddle.json  intrinerror.json  rotnoise.json  transnoise.json
